test/files/neg/unicode-unterminated-quote.check
unicode-unterminated-quote.scala:2: error: unclosed string literal
  val x = /u0022
               ^
unicode-unterminated-quote.scala:2: error: '}' expected but eof found.
  val x = /u0022
                ^
two errors found
